# uv-starter

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: configuration.md  github-actions.md  index.md  toolchain.md  uv.md
notebooks/: hello.ipynb
src/uv_starter/: config.py  hello.py
src/uv_starter/api/: main.py
tests/api/: test_api.py
tests/unit_tests/: test_config.py  test_demo_module.py
